--- a/src/app/Components/directeur-dashboard/ajouter-enseignant.component.html
+++ b/src/app/Components/directeur-dashboard/ajouter-enseignant.component.html
@@ -1,33 +1,149 @@
-<!-- ajouter-enseignant.component.html -->
-<div>
-    <h1>Ajouter un Enseignant</h1>
-  
-    <form (submit)="addEnseignant()">
-      <label for="firstName">Prénom:</label>
-      <input id="firstName" [(ngModel)]="enseignant.firstName" name="firstName" required />
-  
-      <label for="lastName">Nom:</label>
-      <input id="lastName" [(ngModel)]="enseignant.lastName" name="lastName" required />
-  
-      <label for="email">Email:</label>
-      <input id="email" [(ngModel)]="enseignant.email" name="email" type="email" required />
-  
-      <label for="username">Nom d'utilisateur:</label>
-      <input id="username" [(ngModel)]="enseignant.username" name="username" required />
-  
-      <label for="password">Mot de passe:</label>
-      <input id="password" [(ngModel)]="enseignant.password" name="password" type="password" required />
-  
-      <label for="phone">Téléphone:</label>
-      <input id="phone" [(ngModel)]="enseignant.phone" name="phone" required />
-  
-      <label for="specialite">Spécialité:</label>
-      <input id="specialite" [(ngModel)]="enseignant.specialite" name="specialite" required />
-  
-      <button type="submit">Ajouter</button>
+<div class="container">
+    <h1 class="page-title">Ajouter un Enseignant</h1> <!-- Enhanced title styling -->
+
+    <div class="text-right mb-3">
+        <a routerLink="/directeur-dashboard" class="btn btn-secondary">
+            <i class="glyphicon glyphicon-arrow-left"></i> Retour
+        </a>
+    </div> <!-- Back button -->
+
+    <form class="well form-horizontal enseignant-form" (submit)="addEnseignant()" novalidate>
+        <fieldset>
+
+            <!-- Prénom -->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="firstName">Prénom:</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input id="firstName" 
+                               [(ngModel)]="enseignant.firstName" 
+                               name="firstName" 
+                               class="form-control" 
+                               required 
+                               placeholder="Prénom" />
+                    </div>
+                </div>
+            </div>
+
+            <!-- Nom -->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="lastName">Nom:</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input id="lastName" 
+                               [(ngModel)]="enseignant.lastName" 
+                               name="lastName" 
+                               class="form-control" 
+                               required 
+                               placeholder="Nom" />
+                    </div>
+                </div>
+            </div>
+
+            <!-- Email -->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="email">Email:</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                        <input id="email" 
+                               [(ngModel)]="enseignant.email" 
+                               name="email" 
+                               type="email" 
+                               class="form-control" 
+                               required 
+                               placeholder="Email" />
+                    </div>
+                </div>
+            </div>
+
+            <!-- Nom d'utilisateur -->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="username">Nom d'utilisateur:</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input id="username" 
+                               [(ngModel)]="enseignant.username" 
+                               name="username" 
+                               class="form-control" 
+                               required 
+                               placeholder="Nom d'utilisateur" />
+                    </div>
+                </div>
+            </div>
+
+            <!-- Mot de passe -->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="password">Mot de passe:</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input id="password" 
+                               [(ngModel)]="enseignant.password" 
+                               name="password" 
+                               type="password" 
+                               class="form-control" 
+                               required 
+                               placeholder="Mot de passe" />
+                    </div>
+                </div>
+            </div>
+
+            <!-- Téléphone -->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="phone">Téléphone:</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                        <input id="phone" 
+                               [(ngModel)]="enseignant.phone" 
+                               name="phone" 
+                               class="form-control" 
+                               required 
+                               placeholder="Téléphone" />
+                    </div>
+                </div>
+            </div>
+
+            <!-- Spécialité -->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="specialty">Spécialité:</label>
+                <div class="col-md-4 inputGroupContainer">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-book"></i></span>
+                        <input id="specialty" 
+                               [(ngModel)]="enseignant.specialite" 
+                               name="specialty" 
+                               class="form-control" 
+                               required 
+                               placeholder="Spécialité" />
+                    </div>
+                </div>
+            </div>
+
+            <!-- Submit Button -->
+            <div class="form-group">
+                <label class="col-md-4 control-label"></label>
+                <div class="col-md-4">
+                    <button type="submit" class="btn btn-warning">
+                        Ajouter <span class="glyphicon glyphicon-plus"></span>
+                    </button>
+                </div>
+            </div>
+
+        </fieldset>
     </form>
-  
-    <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
-    <p *ngIf="successMessage" class="success">{{ successMessage }}</p>
-  </div>
-  
+</div>
+
+<style>
+    .page-title {
+        font-size: 2em; /* Adjust the font size */
+        font-weight: bold; /* Make it bold */
+        color: #333; /* Change the text color */
+        margin-bottom: 20px; /* Space below the title */
+        text-align: center; /* Center align the title */
+    }
+</style>
