--- a/src/app/Components/academic-projects/academic-projects.component.html
+++ b/src/app/Components/academic-projects/academic-projects.component.html
@@ -46,7 +46,7 @@
 
     <ng-container matColumnDef="enseignant_id">
       <mat-header-cell *matHeaderCellDef> ID Enseignant </mat-header-cell>
-      <mat-cell *matCellDef="let projet"> {{ projet.enseignant_id }} </mat-cell>
+      <mat-cell *matCellDef="let projet"> </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="etudiant_id">
