--- a/src/app/Components/manage-subject/manage-subject.component.html
+++ b/src/app/Components/manage-subject/manage-subject.component.html
@@ -1,6 +1,8 @@
+<body>
+  
+
 <div class="container">
-    <h1>Gérer Matière</h1>
-    <p>Matière ID: {{ matiereId }}</p>
+    <h1>Géstion des Matières</h1>
     <ul>
       <li>
         <a [routerLink]="['/manage-courses', matiereId]">Gérer Cours</a>
@@ -10,4 +12,4 @@
       </li>
     </ul>
   </div>
-  
+  </body>
